[BeOS]Bug 327197. Fixing corrupted alpha in iconChannel.r=sergei_d, BeOS-only